<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.junyoung.firechatting.PrepareActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:text="Write your name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:text="@string/select_your_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/women"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/women"/>
        <RadioButton
            android:id="@+id/men"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/men"/>
        <RadioButton
            android:id="@+id/wing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tgwing"/>
    </RadioGroup>


    <Button
        android:onClick="clickComfirmUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comfirm"/>
</LinearLayout>
